syntax = "proto3";

option csharp_namespace = "TagTool.Backend";

package TagToolBackend;

service TagService {
  rpc CreateTag (CreateTagRequest) returns (CreateTagReply);
  rpc DeleteTag (DeleteTagRequest) returns (DeleteTagReply);

  rpc TagFilesInFolder (TagFilesInFolderRequest) returns (TagFilesInFolderReply);
  rpc UntagFolder (UntagFolderRequest) returns (UntagFolderReply);
  rpc TagAll(TagAllRequest) returns (TagAllReply); 

  rpc Undo (UndoRequest) returns (UndoReply); // todo: move this responsibility to application side
  rpc Redo (RedoRequest) returns (RedoReply); // todo: move this responsibility to application side
}

message CreateTagRequest {
  string tagName = 1;
}

message CreateTagReply {
  bool isSuccess = 1;
}

message DeleteTagRequest {
  string tagName = 1;
}

message DeleteTagReply {
  bool isSuccess = 1;
}

message TagFilesInFolderRequest {
  string tagName = 1;
  string path = 2;
}

message TagFilesInFolderReply {
  bool isSuccess = 1;
}

message UntagFolderRequest {
  string tagName = 1;
  string path = 2;
}

message UntagFolderReply {
  bool isSuccess = 1;
}

message TagAllRequest {
  repeated string FileOrFolderName = 1;
}

message TagAllReply {
  bool isSuccess = 1;
}

message UndoRequest {
}

message UndoReply {
  bool isSuccess = 1;
}

message RedoRequest {
}

message RedoReply {
  bool isSuccess = 1;
} 
